Fix some layout issues

--- a/docs/_static/basic.css
+++ b/docs/_static/basic.css
@@ -1,14 +1,22 @@
 .wy-nav-content {
   max-width: none;
 }
+.rst-content table.docutils {
+  width: 100%;
+  table-layout: fixed;
+}
 .rst-content table.docutils td {
   vertical-align: top;
+}
+.rst-content code {
+  font-size: 10px;
 }
 
 q {
   font-style: italic;
 }
 
+/* From Bootstrap */
 .badge {
   display: inline-block;
   padding: .25em .6em;
